Fix split-text alignment: revert to height 50%, use ::after to fill subpixel gap

--- a/src/App.css
+++ b/src/App.css
@@ -95,17 +95,27 @@ body {
     position: absolute;
     left: 0;
     width: 100%;
+    height: 50%;
     background-color: var(--bg);
     overflow: hidden;
 }
 
 .split-top {
     top: 0;
-    bottom: calc(50% - 2px);
+}
+
+.split-top::after {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--bg);
+    pointer-events: none;
 }
 
 .split-bottom {
-    top: calc(50% - 2px);
     bottom: 0;
 }
 
